Blog updated to include assignment 3 reflection.

--- a/blog.html
+++ b/blog.html
@@ -13,6 +13,8 @@
 		<p>Links to each reflection:</p>
 		<ul>
 			<li><a href = "blog_entries/assignment_1_reflection.html">Assignment 1 Reflection</a></li>
+			<li><a href = "blog_entries/assignment_2_reflection.html">Assignment 2 Reflection</a></li>
+			<li><a href = "blog_entries/assignment_3_reflection.html">Assignment 3 Reflection</a></li>
 		</ul>
 	</body>
 </html>
