--- a/blog_entries/assignment_1_reflection.html
+++ b/blog_entries/assignment_1_reflection.html
@@ -5,7 +5,7 @@
 		<title>Michael's Code Blog - Assignment 1 Reflection</title>
 	</head>
 	<body>
-		<p>Previous | Next | <a href = "../blog.html">Blog Home</a></p>
+		<p>Previous | <a href = "assignment_2_reflection.html">Next</a> | <a href = "../blog.html">Blog Home</a></p>
 		<h1>Assignment 1 Reflection</h1>
 		<p>April 10th, 2021</p>
 		<p>This assignment wasn't too difficult; I think the most difficult part was formatting my picture so that it wasn't gigantic.
